--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <a href= "page2.html?image=images/image1.png" class="hero-link"> 
             <p class="article-date-hero">JULY 23, 2022</p>
             <p class="article-title-hero">My journey as a Front-end Developer</p>
-            <p class="article-preview-hero">After several months of learning in the Frontend Developer Career Path, I would love to share my lessons, experiences and meet like-minded peers.</p>
+            <p class="article-preview-hero">After several months of learning in the Frontend Developer Career Path
+                , I would love to share my lessons, experiences and meet like-minded peers.</p>
        </a>
     </section>
     
