--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
         
         <p class="date">Apr 22, 2023</p>
         <h2>My new journey as a bootcamp student.</h2>
-        <p>After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the 
+        <p>After several months of learning in the Frontend Developer Career Path, I've made the big jump <p> over to the 
             Bootcamp to get expert code reviews of my Solo Projects and meet like-minded peers.</p>
     </div>
 </div>
